--- a/Oblqo/Controls/ExceptionVIew.ru.resx
+++ b/Oblqo/Controls/ExceptionVIew.ru.resx
@@ -117,36 +117,38 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label3.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="callStackTextBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>385, 228</value>
+  </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>84, 14</value>
+    <value>72, 13</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
     <value>Стек вызова</value>
   </data>
-  <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="messageTextBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>385, 42</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 14</value>
+    <value>65, 13</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>Сообщение</value>
   </data>
-  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="typeTextBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>385, 20</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>28, 14</value>
+    <value>26, 13</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
     <value>Тип</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Исключение</value>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>487, 311</value>
+  </data>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
+    <value>487, 311</value>
   </data>
 </root>
