--- a/Oblqo/Forms/TaskDialog.ru.resx
+++ b/Oblqo/Forms/TaskDialog.ru.resx
@@ -120,7 +120,23 @@
   <data name="tabInfo.Text" xml:space="preserve">
     <value>Детали</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="exceptionVIew1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 3</value>
+  </data>
+  <data name="exceptionVIew1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>543, 297</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="tabException.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 3, 3, 3</value>
+  </data>
+  <data name="tabException.Size" type="System.Drawing.Size, System.Drawing">
+    <value>549, 303</value>
+  </data>
+  <data name="tabException.Text" xml:space="preserve">
+    <value>Описание ошибки</value>
+  </data>
   <data name="button1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
