--- a/Oblqo/Controls/DriveAccountControl.ru.resx
+++ b/Oblqo/Controls/DriveAccountControl.ru.resx
@@ -118,61 +118,119 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label10.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 11</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="label10.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="label10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>37, 13</value>
+    <value>45, 17</value>
   </data>
   <data name="label10.Text" xml:space="preserve">
     <value>Диск:</value>
   </data>
   <data name="driveRootPathBrowseButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>356, 164</value>
+    <value>475, 202</value>
+  </data>
+  <data name="driveRootPathBrowseButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="driveRootPathBrowseButton.Size" type="System.Drawing.Size, System.Drawing">
+    <value>135, 38</value>
   </data>
   <data name="driveRootPathBrowseButton.Text" xml:space="preserve">
     <value>Обзор...</value>
   </data>
   <data name="driveKindComboBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>143, 6</value>
+    <value>191, 7</value>
+  </data>
+  <data name="driveKindComboBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="driveKindComboBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>314, 21</value>
+    <value>417, 24</value>
   </data>
   <data name="imageResolutionComboBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>143, 34</value>
+    <value>191, 42</value>
+  </data>
+  <data name="imageResolutionComboBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="imageResolutionComboBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>314, 21</value>
+    <value>417, 24</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 92</value>
+    <value>4, 113</value>
+  </data>
+  <data name="label6.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 13</value>
+    <value>163, 17</value>
   </data>
   <data name="label6.Text" xml:space="preserve">
     <value>Путь к корневой папке:</value>
   </data>
+  <data name="label7.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 46</value>
+  </data>
+  <data name="label7.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="label7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 13</value>
+    <value>166, 17</value>
   </data>
   <data name="label7.Text" xml:space="preserve">
     <value>Макс. размер картинки:</value>
   </data>
   <data name="driveRootPathTextBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 108</value>
+    <value>8, 133</value>
+  </data>
+  <data name="driveRootPathTextBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="driveRootPathTextBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>600, 22</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>140, 58</value>
+    <value>187, 71</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>317, 47</value>
+    <value>423, 58</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
     <value>Если картинка будет больше этого размера, то она будет автоматически смасштабирована до него</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 131</value>
+    <value>4, 161</value>
+  </data>
+  <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>605, 37</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>Пусть к папке с файлами, например d:\photos. Для Google диска это может быть например photos/trevel.</value>
+  </data>
+  <data name="panel1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>619, 268</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>8, 16</value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
+    <value>619, 268</value>
   </data>
 </root>
